resources/webidl2/test/invalid/baseline/promise-with-extended-attribute.txt
Syntax error at line 2, since `interface Foo`:
  Promise<[XAttr] DOMString>
          ^ Promise type cannot have extended attribute
